feat(reports): unify detailed health statistics