@@ -2,6 +2,7 @@ package com.fzdzzj.lifehabitassistant.server.service;
 
 import com.fzdzzj.lifehabitassistant.pojo.AnalysisDtos;
 import com.fzdzzj.lifehabitassistant.pojo.HabitRecord;
+import com.fzdzzj.lifehabitassistant.pojo.HealthStatistics;
 import com.fzdzzj.lifehabitassistant.pojo.ReportDtos;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -15,22 +16,20 @@ import java.util.stream.Collectors;
 
 @Service
 public class ReportService {
-    private final AnalysisService analysis;
+    private final HabitService habits;
+    private final HealthStatisticsService statistics;
     private final AdviceGenerator advice;
-    private final HealthThresholds thresholds;
-    private final DrinkHealthRules drinkRules;
 
-    public ReportService(AnalysisService analysis, AdviceGenerator advice, HealthThresholds thresholds, DrinkHealthRules drinkRules) {
-        this.analysis = analysis;
+    public ReportService(HabitService habits, HealthStatisticsService statistics, AdviceGenerator advice) {
+        this.habits = habits;
+        this.statistics = statistics;
         this.advice = advice;
-        this.thresholds = thresholds;
-        this.drinkRules = drinkRules;
     }
 
     @Transactional(readOnly = true)
     public ReportDtos.ReportResponse weekly(LocalDate anyDay) {
-        LocalDate start = anyDay.with(DayOfWeek.MONDAY), end = start.plusDays(6);
-        return build("weekly", start, end);
+        LocalDate start = anyDay.with(DayOfWeek.MONDAY);
+        return build("weekly", start, start.plusDays(6));
     }
 
     @Transactional(readOnly = true)
@@ -39,31 +38,44 @@ public class ReportService {
     }
 
     private ReportDtos.ReportResponse build(String type, LocalDate start, LocalDate end) {
-        List<HabitRecord> r = analysis.between(start, end);
-        List<AnalysisDtos.DailyTrend> days = r.stream().map(this::daily).toList();
-        AnalysisDtos.AnalysisResponse a = advice.generate((int) (end.toEpochDay() - start.toEpochDay() + 1), r);
-        return new ReportDtos.ReportResponse(type, start, end, r.size(), round(days.stream().mapToDouble(AnalysisDtos.DailyTrend::sleepHours).average().orElse(0)), round(days.stream().mapToInt(AnalysisDtos.DailyTrend::dietScore).average().orElse(0)), days.stream().mapToInt(AnalysisDtos.DailyTrend::exerciseMinutes).sum(), round(days.stream().mapToInt(AnalysisDtos.DailyTrend::hydrationMl).average().orElse(0)), days.stream().mapToInt(AnalysisDtos.DailyTrend::riskDrinkVolumeMl).sum(), round(days.stream().filter(AnalysisDtos.DailyTrend::achieved).count() * 100d / Math.max(1, days.size())), days, weekly(r), a.risks(), a.suggestions());
+        List<HabitRecord> records = habits.range(start, end);
+        HealthStatistics summary = statistics.summarize(records, end);
+        int days = Math.toIntExact(end.toEpochDay() - start.toEpochDay() + 1L);
+        var analysis = advice.generate(days, summary);
+        return new ReportDtos.ReportResponse(type, start, end, summary.recordCount(), summary.averageSleepHours(),
+                summary.averageDietScore(), summary.totalExerciseMinutes(), summary.averageHydrationMl(),
+                summary.totalRiskDrinkVolumeMl(), achievementRate(summary),
+                summary.dailyStatistics().stream().map(this::daily).toList(), weekly(records),
+                analysis.risks(), analysis.suggestions());
     }
 
     private List<ReportDtos.WeekSummary> weekly(List<HabitRecord> records) {
-        return records.stream().collect(Collectors.groupingBy(r -> r.getRecordDate().with(DayOfWeek.MONDAY), TreeMap::new, Collectors.toList())).entrySet().stream().map(e -> {
-            var r = e.getValue();
-            return new ReportDtos.WeekSummary(e.getKey(), round(r.stream().mapToLong(HabitRecord::sleepMinutes).average().orElse(0) / 60d), r.stream().mapToInt(HabitRecord::exerciseMinutes).sum(), round(r.stream().mapToInt(drinkRules::hydrationMl).average().orElse(0)), r.stream().mapToInt(drinkRules::riskDrinkVolumeMl).sum());
-        }).toList();
+        return records.stream().collect(Collectors.groupingBy(record -> record.getRecordDate().with(DayOfWeek.MONDAY),
+                        TreeMap::new, Collectors.toList()))
+                .entrySet().stream()
+                .map(entry -> weekSummary(entry.getKey(), entry.getValue()))
+                .toList();
     }
 
-    private AnalysisDtos.DailyTrend daily(HabitRecord record) {
-        int hydrationMl = drinkRules.hydrationMl(record);
-        return new AnalysisDtos.DailyTrend(record.getRecordDate(), round(record.sleepMinutes() / 60d),
-                record.getDietScore(), record.exerciseMinutes(), hydrationMl,
-                drinkRules.riskDrinkVolumeMl(record), thresholds.isAchieved(record, hydrationMl));
+    private ReportDtos.WeekSummary weekSummary(LocalDate weekStart, List<HabitRecord> records) {
+        HealthStatistics summary = statistics.summarize(records, weekStart.plusDays(6));
+        return new ReportDtos.WeekSummary(weekStart, summary.averageSleepHours(), summary.totalExerciseMinutes(),
+                summary.averageHydrationMl(), summary.totalRiskDrinkVolumeMl());
     }
 
-    private boolean achieved(HabitRecord r) {
-        return thresholds.isAchieved(r, drinkRules.hydrationMl(r));
+    private AnalysisDtos.DailyTrend daily(HealthStatistics.DailyStatistics daily) {
+        return new AnalysisDtos.DailyTrend(daily.date(), round(daily.totalSleepMinutes() / 60d), daily.dietScore(),
+                daily.exerciseMinutes(), daily.hydrationMl(), daily.riskDrinkVolumeMl(), daily.achieved(),
+                round(daily.nightSleepMinutes() / 60d), round(daily.napSleepMinutes() / 60d),
+                daily.moderateEquivalentExerciseMinutes(), daily.exerciseMinutesByType());
     }
 
-    private double round(double n) {
-        return Math.round(n * 10) / 10d;
+    private double achievementRate(HealthStatistics statistics) {
+        return round(statistics.dailyStatistics().stream().filter(HealthStatistics.DailyStatistics::achieved).count()
+                * 100d / Math.max(1, statistics.recordCount()));
+    }
+
+    private double round(double value) {
+        return Math.round(value * 10d) / 10d;
     }
 }
